--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,3 @@
-email: 'support@kebunmu.org'
-phone: '1800 123 000'
+email: 'hello@gardenarchipelago.org'
+phone: 'N/A'
 contact_button_link: 'contact'
