--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,4 +1,4 @@
 google_analytics_id: ""  
 meta_twitter_site: ""
 meta_twitter_creator: ""
-copyright_text: 'Copyright 2023 Kebunmu.org'
+copyright_text: 'Copyright 2023 Garden Archipelago Foundation'
