--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,3 @@
-email: 'hello@gardenarchipelago.org'
+email: 'archipelagogarden@gmail.com'
 instagram: 'gardenarchipelago'
 contact_button_link: 'contact'
