--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,4 +1,4 @@
 google_analytics_id: ""  
 meta_twitter_site: ""
 meta_twitter_creator: ""
-copyright_text: 'Copyright 2023 Garden Archipelago Foundation'
+copyright_text: '© Garden Archipelago Foundation 2023. All rights reserved. Garden Archipelago Foundation is in the process of registering as a 501(c)(3) nonprofit organization. Please note that once our registration is complete, donations from sponsors based in the United States may be tax-deductible. We appreciate your support as we work towards achieving our mission.'
